--- a/style.css
+++ b/style.css
@@ -38,13 +38,32 @@ body{
     color:#fff;
 }
 .text{
-    width: 80%;
-    top:55%;
+    width: 80% !important;
+    top:50%;
     left:50%;
     transform: translate(-50%,-50%);
     position: absolute;
     text-align:center;
     color:#fff;
+}
+.cards{
+    width: 90%;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-align:center;
+    color:#fff;
+}
+.special-card {
+/* create a custom class so you 
+   do not run into specificity issues 
+   against bootstraps styles
+   which tends to work better than using !important 
+   (future you will thank you later)*/
+
+  background-color: rgb(0, 0, 0,0) !important;
+
 }
 h1{
     font-size: 90px;
@@ -86,6 +105,11 @@ h2{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+  .parallax-card{
+  
+  
+    
   }
 
 
